调整页面样式

--- a/testthymeleaf/src/main/resources/static/pages/index.html
+++ b/testthymeleaf/src/main/resources/static/pages/index.html
@@ -25,10 +25,10 @@
 			      		<i-col span="6">{{dataInfo.id}}</i-col>
        					<i-col span="2">数据库自动生成id</i-col>
        					<i-col span="13"><i-button type="info" @click="creatLog" v-if="isCreatLog">生成文件</i-button><Divider type="vertical"></Divider>
-       					<i-button type="info" @click="runMvnCom" :loading="mvnLoading" v-if="isCanRun">
-       						<span v-if="!mvnLoading">执行文件</span>
-        					<span v-else>Loading...</span>
-       					</i-button></i-col>
+      					<i-button type="info" @click="runMvnCom" :loading="mvnLoading" v-if="isCanRun">
+      						<span v-if="!mvnLoading">执行文件</span>
+       						<span v-else>Loading...</span>
+      					</i-button></i-col>
 			      	</Row>
 			      	<Row class="code-row-bg">
 			      		<i-col span="2">游戏码:</i-col>
@@ -50,145 +50,130 @@
 			      		<i-col span="6"><i-input  placeholder="默认基类名称" v-model="dataInfo.baseLogClassName" clearable></i-input></i-col>
        					<i-col span="16"></i-col>
 			      	</Row>
-			      	<Divider orientation="left">发送服务的信息</Divider>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">发送服务项目名称：</i-col>
-			      		<i-col span="6"><i-input  placeholder="发送服务项目名称" v-model="dataInfo.sendObjName" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">发送服务代码命名空间：</i-col>
-			      		<i-col span="6"><i-input  placeholder="发送服务中服务代码命名空间：" v-model="dataInfo.sendServicePackage" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">发送实体类代码命名空间：</i-col>
-			      		<i-col span="6"><i-input  placeholder="发送服务中实体类代码命名空间：" v-model="dataInfo.sendBeanPackage" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">日志消息流的通道名：</i-col>
-			      		<i-col span="6"><i-input  placeholder="日志消息流的通道名：" v-model="dataInfo.channelName" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">执行的命令文件：</i-col>
-			      		<i-col span="6"><i-input  placeholder="mvncom.bat or mvncom.sh" v-model="dataInfo.mvnCom" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">代码版本：</i-col>
-			      		<i-col span="6"><i-input  placeholder="0.0.1-RELEASE" v-model="dataInfo.codeVersion" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">代码GroupId：</i-col>
-			      		<i-col span="6"><i-input  placeholder="com.dc" v-model="dataInfo.codeGroupId" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">代码ArtifactId：</i-col>
-			      		<i-col span="6"><i-input  placeholder="autosendrmq" v-model="dataInfo.codeArtifactId" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">mavenId：</i-col>
-			      		<i-col span="6"><i-input  placeholder="与maven配置中的一致" v-model="dataInfo.mavenId" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">release版本上传路径：</i-col>
-			      		<i-col span="6"><i-input  placeholder="http://111.230.26.190:8081/repository/maven-releases/" v-model="dataInfo.releaseMavenPath" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
-			      	<Row type="flex" class="code-row-bg" align="middle">
-			      		<i-col span="2">snapshot版本上传路径：</i-col>
-			      		<i-col span="6"><i-input  placeholder="http://111.230.26.190:8081/repository/maven-snapshots/" v-model="dataInfo.snapshotMavenPath" clearable></i-input></i-col>
-       					<i-col span="16"></i-col>
-			      	</Row>
+			      	<Divider orientation="left">发送接收信息</Divider>
+			      	<Tabs type="card">
+		      			<tab-pane label="发送服务信息">
+					      	<Row type="flex" class="code-row-bg" align="middle" :gutter="15">
+					      		<i-col span="2">发送服务项目名称：</i-col>
+					      		<i-col span="6"><i-input  placeholder="发送服务项目名称" v-model="dataInfo.sendObjName" clearable></i-input></i-col>
+					      		<i-col span="2">服务代码命名空间：</i-col>
+					      		<i-col span="6"><i-input  placeholder="发送服务中服务代码命名空间：" v-model="dataInfo.sendServicePackage" clearable></i-input></i-col>
+		       					<i-col span="8"></i-col>
+					      	</Row>
+					      	<Row type="flex" class="code-row-bg" align="middle" :gutter="15">
+					      		<i-col span="2">实体类代码命名空间：</i-col>
+					      		<i-col span="6"><i-input  placeholder="发送服务中实体类代码命名空间：" v-model="dataInfo.sendBeanPackage" clearable></i-input></i-col>
+					      		<i-col span="2">日志消息流的通道名：</i-col>
+					      		<i-col span="6"><i-input  placeholder="日志消息流的通道名：" v-model="dataInfo.channelName" clearable></i-input></i-col>
+		       					<i-col span="8"></i-col>
+					      	</Row>
+					      	<Row type="flex" class="code-row-bg" align="middle" :gutter="15">
+					      		<i-col span="2">执行的命令文件：</i-col>
+					      		<i-col span="6"><i-input  placeholder="mvncom.bat or mvncom.sh" v-model="dataInfo.mvnCom" clearable></i-input></i-col>
+					      		<i-col span="2">代码版本：</i-col>
+					      		<i-col span="6"><i-input  placeholder="0.0.1-RELEASE" v-model="dataInfo.codeVersion" clearable></i-input></i-col>
+		       					<i-col span="8"></i-col>
+					      	</Row>
+					      	<Row type="flex" class="code-row-bg" align="middle" :gutter="15">
+					      		<i-col span="2">代码GroupId：</i-col>
+					      		<i-col span="6"><i-input  placeholder="com.dc" v-model="dataInfo.codeGroupId" clearable></i-input></i-col>
+					      		<i-col span="2">代码ArtifactId：</i-col>
+					      		<i-col span="6"><i-input  placeholder="autosendrmq" v-model="dataInfo.codeArtifactId" clearable></i-input></i-col>
+		       					<i-col span="8"></i-col>
+					      	</Row>
+					      	<Row type="flex" class="code-row-bg" align="middle" :gutter="15">
+					      		<i-col span="2">release版本上传路径：</i-col>
+					      		<i-col span="6"><i-input  placeholder="http://111.230.26.190:8081/repository/maven-releases/" v-model="dataInfo.releaseMavenPath" clearable></i-input></i-col>
+					      		<i-col span="2">snapshot版本上传路径：</i-col>
+					      		<i-col span="6"><i-input  placeholder="http://111.230.26.190:8081/repository/maven-snapshots/" v-model="dataInfo.snapshotMavenPath" clearable></i-input></i-col>
+		       					<i-col span="8"></i-col>
+					      	</Row>
+					      	<Row type="flex" class="code-row-bg" align="middle">
+					      		<i-col span="2">mavenId：</i-col>
+					      		<i-col span="6"><i-input  placeholder="与maven配置中的一致" v-model="dataInfo.mavenId" clearable></i-input></i-col>
+		       					<i-col span="16"></i-col>
+					      	</Row>
+				     	</tab-pane>
+				     	<tab-pane label="接收服务信息">
+					     	wangyu
+					    </tab-pane>
+				    </Tabs>
 		      	</div>
 		      	<div style="padding:20px;">
 		      		<i-button  type="info" @click="saveInfo" >保存</i-button><Divider type="vertical"></Divider><i-button type="error" @click="deleteLogManager">删除</i-button>
 		      	</div>
 		      	<Divider></Divider>
 		      </Card>
-		      <Tabs type="card">
-		      	 <tab-pane label="标签一">
-			      <Card title="日志文件" icon="md-list" :padding="0" shadow style="width: 100%;">
-			      	 <div style="padding:20px;">
-			      	 	<i-button type="info" @click="addlogBean">添加日志实体类</i-button>
-			      	 </div>
-			      	 <div style="padding:20px;">
-			      	 	<Collapse v-model="panelvalue" accordion v-for="logBean in logBeans" @on-change="collapseChange">
-			      	 		<Row type="flex" justify="start" align="middle" :gutter="16">
-						      		<i-col span="1">实体名:</i-col>
-						      		<i-col span="3">
-						      			<div v-if="logBean.isBaseBean==='1'">
-						      				<i-input  placeholder="" v-model="logBean.beanName" disabled></i-input>
-						      			</div>
-						      			<div v-else>
-						      				<i-input  placeholder="" v-model="logBean.beanName" clearable></i-input>
-						      			</div>
-						      		</i-col>
-			       					<i-col span="1">实体描述:</i-col>
-			       					<i-col span="3">
-			       						<div v-if="logBean.isBaseBean==='1'">
-						      				<i-input  placeholder="" v-model="logBean.beanDescribe" disabled></i-input>
-						      			</div>
-						      			<div v-else>
-						      				<i-input  placeholder="" v-model="logBean.beanDescribe" clearable></i-input>
-						      			</div>
-			       					</i-col>
-			       					<i-col span="1">基类名称:</i-col>
-			       					<i-col span="3">
-			       						<div v-if="logBean.isBaseBean==='1'">
-						      				<i-input  placeholder="" v-model="logBean.fatherBeanName" disabled></i-input>
-						      			</div>
-						      			<div v-else>
-						      				<i-input  placeholder="" v-model="logBean.fatherBeanName" clearable></i-input>
-						      			</div>
-			       					</i-col>
-			       					<!--<i-col span="1">是否基类:</i-col>
-			       					  <i-col span="2">
-			       						<Radio-group v-model="logBean.isBaseBean">
-										    <Radio label="0">否</Radio>
-										    <Radio label="1">是</Radio>
-										</Radio-group>
-									</i-col>-->
-			       					<i-col span="1">操作:</i-col>
-			       					<i-col span="2"><i-button type="success" @click="saveLogBean(logBean)">保存</i-button><Divider type="vertical"></Divider><i-button type="error" @click="deleteLogBean(logBean)">删除</i-button></i-col>
-						    </Row>
-						    <Panel :name="logBean.beanName">
-						    	{{logBean.beanName}}<Divider type="vertical"></Divider> 实体id:{{logBean.id}}
-						    	<p slot="content">
-						    		<i-button type="info" @click="addlogField(logBean.id)">添加实体字段</i-button>
-						    		<Divider orientation="left">字段内容</Divider>
-									<span v-for="logField in logFields">
-										<Divider orientation="left">fieldid:{{logField.id}}</Divider>
-										<Row type="flex" justify="start" align="middle" :gutter="15" >
-					      					<i-col span="1">类型:</i-col>
-					      					<i-col span="2"><i-input  placeholder="" v-model="logField.fieldType" clearable></i-input></i-col>
-					      					<i-col span="1">名称:</i-col>
-					      					<i-col span="2"><i-input  placeholder="" v-model="logField.fieldName" clearable></i-input></i-col>
-					      					<i-col span="1">大写名:</i-col>
-					      					<i-col span="2"><i-input  placeholder="" v-model="logField.bigName" clearable></i-input></i-col>
-					      					<i-col span="1">注释:</i-col>
-					      					<i-col span="2"><i-input  placeholder="" v-model="logField.comment" clearable></i-input></i-col>
-					      					<i-col span="1">操作:</i-col>
-					      					<i-col span="2"><i-button type="success" @click="saveLogField(logField)">保存</i-button><Divider type="vertical"></Divider><i-button type="error" @click="deleteLogField(logField)">删除</i-button></i-col>
-										</Row>
-										<br>
-									</span>
-						    	</p>
-						    </Panel>
-					   </Collapse>
-			      	 </div>
-			      </Card>
-			     </tab-pane>
-			     <tab-pane label="标签2">
-			     	wangyu
-			     </tab-pane>
-		      </Tabs>
+		      <Card title="日志文件" icon="md-list" :padding="0" shadow style="width: 100%;">
+		      	 <div style="padding:20px;">
+		      	 	<i-button type="info" @click="addlogBean">添加日志实体类</i-button>
+		      	 </div>
+		      	 <div style="padding:20px;">
+		      	 	<Collapse v-model="panelvalue" accordion v-for="logBean in logBeans" @on-change="collapseChange">
+		      	 		<Row type="flex" justify="start" align="middle" :gutter="16">
+					      		<i-col span="1">实体名:</i-col>
+					      		<i-col span="3">
+					      			<div v-if="logBean.isBaseBean==='1'">
+					      				<i-input  placeholder="" v-model="logBean.beanName" disabled></i-input>
+					      			</div>
+					      			<div v-else>
+					      				<i-input  placeholder="" v-model="logBean.beanName" clearable></i-input>
+					      			</div>
+					      		</i-col>
+		       					<i-col span="1">实体描述:</i-col>
+		       					<i-col span="3">
+		       						<div v-if="logBean.isBaseBean==='1'">
+					      				<i-input  placeholder="" v-model="logBean.beanDescribe" disabled></i-input>
+					      			</div>
+					      			<div v-else>
+					      				<i-input  placeholder="" v-model="logBean.beanDescribe" clearable></i-input>
+					      			</div>
+		       					</i-col>
+		       					<i-col span="1">基类名称:</i-col>
+		       					<i-col span="3">
+		       						<div v-if="logBean.isBaseBean==='1'">
+					      				<i-input  placeholder="" v-model="logBean.fatherBeanName" disabled></i-input>
+					      			</div>
+					      			<div v-else>
+					      				<i-input  placeholder="" v-model="logBean.fatherBeanName" clearable></i-input>
+					      			</div>
+		       					</i-col>
+		       					<!--<i-col span="1">是否基类:</i-col>
+		       					  <i-col span="2">
+		       						<Radio-group v-model="logBean.isBaseBean">
+									    <Radio label="0">否</Radio>
+									    <Radio label="1">是</Radio>
+									</Radio-group>
+								</i-col>-->
+		       					<i-col span="1">操作:</i-col>
+		       					<i-col span="2"><i-button type="success" @click="saveLogBean(logBean)">保存</i-button><Divider type="vertical"></Divider><i-button type="error" @click="deleteLogBean(logBean)">删除</i-button></i-col>
+					    </Row>
+					    <Panel :name="logBean.beanName">
+					    	{{logBean.beanName}}<Divider type="vertical"></Divider> 实体id:{{logBean.id}}
+					    	<p slot="content">
+					    		<i-button type="info" @click="addlogField(logBean.id)">添加实体字段</i-button>
+					    		<Divider orientation="left">字段内容</Divider>
+								<span v-for="logField in logFields">
+									<Divider orientation="left">fieldid:{{logField.id}}</Divider>
+									<Row type="flex" justify="start" align="middle" :gutter="15" >
+				      					<i-col span="1">类型:</i-col>
+				      					<i-col span="2"><i-input  placeholder="" v-model="logField.fieldType" clearable></i-input></i-col>
+				      					<i-col span="1">名称:</i-col>
+				      					<i-col span="2"><i-input  placeholder="" v-model="logField.fieldName" clearable></i-input></i-col>
+				      					<i-col span="1">大写名:</i-col>
+				      					<i-col span="2"><i-input  placeholder="" v-model="logField.bigName" clearable></i-input></i-col>
+				      					<i-col span="1">注释:</i-col>
+				      					<i-col span="2"><i-input  placeholder="" v-model="logField.comment" clearable></i-input></i-col>
+				      					<i-col span="1">操作:</i-col>
+				      					<i-col span="2"><i-button type="success" @click="saveLogField(logField)">保存</i-button><Divider type="vertical"></Divider><i-button type="error" @click="deleteLogField(logField)">删除</i-button></i-col>
+									</Row>
+									<br>
+								</span>
+					    	</p>
+					    </Panel>
+				   </Collapse>
+		      	 </div>
+		      </Card>
 		    </div>
 	     </transition>
      	</div>
