修改文件名

--- a/testthymeleaf/src/main/resources/static/pages/index.html
+++ b/testthymeleaf/src/main/resources/static/pages/index.html
@@ -237,6 +237,6 @@
      	</div>
 	</div>
 	<!-- js加载要写在html对象加载之后 -->
-	<script src="../js/main.js"></script>
+	<script src="../js/index.js"></script>
 </body>
 </html>
