--- a/testthymeleaf/src/main/resources/static/pages/main.html
+++ b/testthymeleaf/src/main/resources/static/pages/main.html
@@ -1,17 +1,103 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>日志管理页面</title>
+    <title>日志功能页面</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!-- import Vue.js -->
 	<script src="//vuejs.org/js/vue.min.js"></script>
 	<!-- import stylesheet -->
 	<link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
-	<link rel="stylesheet" href="./css/main.css">
+	
 	<!-- import iView -->
 	<script src="//unpkg.com/iview/dist/iview.min.js"></script>
 	<script src="//unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
+<style>
+   .layout{
+       border: 1px solid #d7dde4;
+       background: #f5f7f9;
+       position: relative;
+       border-radius: 4px;
+       overflow: hidden;
+   }
+   .layout-header-bar{
+       background: #fff;
+       box-shadow: 0 1px 1px rgba(0,0,0,.1);
+   }
+   .layout-logo-left{
+       width: 90%;
+       height: 30px;
+       background: #5b6270;
+       border-radius: 3px;
+       margin: 15px auto;
+   }
+   .menu-icon{
+       transition: all .3s;
+   }
+   .rotate-icon{
+       transform: rotate(-90deg);
+   }
+   .menu-item span{
+       display: inline-block;
+       overflow: hidden;
+       width: 69px;
+       text-overflow: ellipsis;
+       white-space: nowrap;
+       vertical-align: bottom;
+       transition: width .2s ease .2s;
+   }
+   .menu-item i{
+       transform: translateX(0px);
+       transition: font-size .2s ease, transform .2s ease;
+       vertical-align: middle;
+       font-size: 16px;
+   }
+   .collapsed-menu span{
+       width: 0px;
+       transition: width .2s ease;
+   }
+   .collapsed-menu i{
+       transform: translateX(5px);
+       transition: font-size .2s ease .2s, transform .2s ease .2s;
+       vertical-align: middle;
+       font-size: 22px;
+   }
+</style>
+	<div id="mainInfo" class="layout">
+	 <Layout>
+		<Sider ref="side1" hide-trigger collapsible :collapsed-width="78" v-model="isCollapsed">
+		    <i-menu active-name="logManager" theme="dark" width="auto" :class="menuitemClasses">
+		        <Menu-item name="logManager">
+		            <Icon type="ios-navigate"></Icon>
+		            <span>日志管理</span>
+		        </Menu-item>
+		        <Submenu name="4">
+		        	<template slot="title" value="">
+		                <Icon type="ios-search"></Icon>
+		              	  日志查看
+		            </template>
+			        <Menu-item name="1-2">
+			            <Icon type="ios-search"></Icon>
+			            <span>Option 2</span>
+			        </Menu-item>
+			        <Menu-item name="1-3">
+			            <Icon type="ios-settings"></Icon>
+			            <span>Option 3</span>
+			        </Menu-item>
+		        </Submenu>
+		    </i-menu>
+		</Sider>
+		 <Layout>
+                <i-header :style="{padding: 0}" class="layout-header-bar">
+                    <Icon @click.native="collapsedSider" :class="rotateIcon" :style="{margin: '0 20px'}" type="md-menu" size="24"></Icon>
+                </i-header>
+                <i-content :style="{margin: '10px', background: '#fff', minHeight: '260px'}">
+                    Content1111
+                </i-content>
+        </Layout>
+    </Layout>
+	</div>
+<script src="../js/main.js"></script>
 </body>
 </html>
