--- a/testthymeleaf/src/main/resources/static/pages/main.html
+++ b/testthymeleaf/src/main/resources/static/pages/main.html
@@ -75,7 +75,7 @@
 		        <Submenu name="4">
 		        	<template slot="title" value="">
 		                <Icon type="ios-search"></Icon>
-		              	  日志查看
+		                <span>日志查看</span>
 		            </template>
 			        <Menu-item name="1-2">
 			            <Icon type="ios-search"></Icon>
