--- a/testthymeleaf/src/main/resources/static/pages/main.html
+++ b/testthymeleaf/src/main/resources/static/pages/main.html
@@ -90,10 +90,12 @@
 		</Sider>
 		 <Layout>
                 <i-header :style="{padding: 0}" class="layout-header-bar">
-                    <Icon @click.native="collapsedSider" :class="rotateIcon" :style="{margin: '0 20px'}" type="md-menu" size="24"></Icon>
+                    <Icon @click.native="collapsedSider" :class="rotateIcon" :style="{margin: '0 10px'}" type="md-menu" size="24"></Icon>
                 </i-header>
-                <i-content :style="{margin: '10px', background: '#fff', minHeight: '260px'}">
-                    Content1111
+                <i-content :style="{background: '#fff', minHeight: '500px'}">
+                   <iframe name = "contentInfo" id = "contentInfo" v-bind:src="reportUrl"
+				   width="100%" height="90%" frameborder="0" scrolling="yes">
+				   </iframe>
                 </i-content>
         </Layout>
     </Layout>
