--- a/testthymeleaf/src/main/resources/static/pages/index.html
+++ b/testthymeleaf/src/main/resources/static/pages/index.html
@@ -150,8 +150,8 @@
 					      	<Row type="flex" class="code-row-bg" align="middle" :gutter="15">
 					      		<i-col span="2">docker地址：</i-col>
 					      		<i-col span="6"><i-input  placeholder="docker地址" v-model="dataInfo.receiverDockerHost" clearable></i-input></i-col>
-					      		<i-col span="2">docker端口：</i-col>
-					      		<i-col span="6"><i-input  placeholder="docker端口" v-model="dataInfo.receiverDockerPort" clearable></i-input></i-col>
+					      		<i-col span="2">服务查询地址：</i-col>
+					      		<i-col span="6"><i-input  placeholder="服务查询地址" v-model="dataInfo.receiverSearchHost" clearable></i-input></i-col>
 		       					<i-col span="8"></i-col>
 					      	</Row>
 					      	<Row type="flex" class="code-row-bg" align="middle">
